# ColoursPlusPlus

./: CMakeLists.txt  ColoursPlusPlus.pro  LICENSE.txt  README.md  assets.qrc  main.cpp  sgcentralmanagement.cpp  sgcomplementarycolourrenderer.cpp  sgcomplementarycolourrenderer.h  sgestimatergbmanagement.cpp  sgestimatergbmanagement.h  sgexplainpagemanagement.cpp  sgexplainpagemanagement.h  sggenerallibrary.cpp  sggenerallibrary.h  sghueselectrenderer.cpp  sghueselectrenderer.h  sgillusionmanagement.cpp  sgillusionmanagement.h  sginstructionspagemanagement.cpp  sginstructionspagemanagement.h  sgintropagemanagement.cpp  sgintropagemanagement.h  sglayoutexplainpage.cpp  sglayoutexplainpage.h  sglayoutinstructionspage.cpp  sglayoutinstructionspage.h  sglayoutintropage.cpp  sglayoutintropage.h  sglayoutselectpage.cpp  sglayoutselectpage.h  sgselectpagemanagement.cpp  sgselectpagemanagement.h  sgsignalsemitter.cpp  sgsignalsemitter.h  sgtext011260021.cpp  sgtext011260021.h  sgtext022110021.cpp  sgtext022110021.h  sgtext022221131.h  (+2 more)
.github/workflows/: build.yaml
SGDoc_source/: 00.sgdoc  01.sgdoc  02.sgdoc  03.sgdoc  04.sgdoc  05.sgdoc  06.sgdoc  07.sgdoc  08.sgdoc  09.sgdoc  10.sgdoc  11.sgdoc  12.sgdoc  13.sgdoc  14.sgdoc  15.sgdoc  16.sgdoc  17.sgdoc  18.sgdoc  19.sgdoc
assets/: circle.frag  circle.vert  complementarycolour.frag  complementarycolour.vert  fractal.vert  hueselect.frag  hueselect.vert  polygon.frag  polygon.vert
fakeqml/: qmldir
include/: SGCLPCircleDisplay.h  SGCLPDisplayPage.h  SGCLPFractalDisplay.h  SGCLPIntroductionPage.h  SGCLPOptionsPage.h  SGCLPPolygonDisplay.h  SGCLPPresetsSelectionPage.h  SGCLPStarDisplay.h
shaders/: circle.frag  circle.vert  fractal.frag  fractal.vert  polygon.frag  polygon.vert
src/: SGCLPCircleDisplay.cpp  SGCLPDisplayPage.cpp  SGCLPFractalDisplay.cpp  SGCLPIntroductionPage.cpp  SGCLPOptionsPage.cpp  SGCLPPolygonDisplay.cpp  SGCLPPresetsSelectionPage.cpp  SGCLPStarDisplay.cpp  main.cpp
