cmake_minimum_required(VERSION 3.21 FATAL_ERROR)
find_package(SGEXTN REQUIRED)
BuildLah_use_default_settings()
project(ColoursPlusPlus VERSION 2.0.0 LANGUAGES CXX)
BuildLah_find_dependencies()
BuildLah_add_component(ColoursPlusPlus_app GUI "." "" "" "ColoursPlusPlus" SGEXTN::SG_Containers SGEXTN::SG_Math SGEXTN::SG_Core SGEXTN::SG_FileSystem SGEXTN::SG_Widgets SGEXTN::SG_RI SGEXTN::EntryPoint_SG)
